# spin-yolo

./: Makefile  readme.md  spin.toml
.spin/logs/: directly-rust_stdout.txt  face-detection_stdout.txt
.wit/components/face-detection/: deps.wit
api/: Cargo.toml
api/src/: lib.rs
api/src/bindings/: deps.rs
detection/: Cargo.toml
detection/src/: lib.rs
directly-rust/: Cargo.toml
directly-rust/src/: detection.rs  lib.rs
lib/: Cargo.toml  readme.md
lib/src/: bindings.rs  detection.rs  lib.rs
lib/wit/: world.wit
