[package]
name = "face-detection"
authors = ["Radu Matei <radu@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
spin-sdk = "3.1.0"
wit-bindgen = "0.32.0"

[workspace]
