[package]
name = "directly-rust"
authors = ["Radu Matei <radu@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-sdk = "3.1.0"
anyhow = "1.0.93"
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }
tract = "0.21.7"
tract-onnx = "0.21.7"
wit-bindgen-rt = { version = "0.37.0", features = ["bitflags"] }

[workspace]
