[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
detection = { path = "../detection" }
wit-bindgen-rt = { version = "0.37.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:lib"

[package.metadata.component.dependencies]
